# http-server

./: .gitignore  CMakeLists.txt  README.md  libs.h  main.cpp
headers/: HttpServer.h  Request.h  Response.h  ResponseBuilder.h  ResponseFactory.h
headers/entity/: Command.h  Request.h  RequestType.h  Response.h  ResponseHeader.h  ResponseType.h
headers/response_builders/: BadResponseBuilder.h  EchoResponseBuilder.h  EmptyResponseBuilder.h  FileGetResponseBuilder.h  FilePostResponseBuilder.h  UserAgentResponseBuilder.h
src/: HttpServer.cpp  Request.cpp  Response.cpp  ResponseBuilder.cpp  ResponseFactory.cpp
src/response_builders/: BadResponseBuilder.cpp  EchoResponseBuilder.cpp  EmptyResponseBuilder.cpp  FileGetResponseBuilder.cpp  FilePostResponseBuilder.cpp  UserAgentResponseBuilder.cpp
test/: Test.py
